<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray6"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/rlTop_line"
        layout="@layout/duo_view_tips" />

    <TextView
        android:id="@+id/tv1_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36"
        android:layout_below="@+id/rlTop_line"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dp_20"
        android:text="@string/view_line_progress"
        android:textColor="@color/gray1"
        android:textSize="@dimen/sp_16" />

    <FrameLayout
        android:id="@+id/flNum_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/tv1_line"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            style="@style/blackTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/queueLine" />

        <TextView
            android:id="@+id/tvNum_line"
            style="@style/blackTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/queueUser" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rlTime_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/flNum_line"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            style="@style/blackTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/expectTime" />

        <TextView
            android:id="@+id/tvTime_line"
            style="@style/blackTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/cmTime_line"
            android:text="@string/expectCount" />

        <Chronometer
            android:id="@+id/cmTime_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tvDown_line"
            android:textColor="@color/gray1" />

        <TextView
            android:id="@+id/tvDown_line"
            style="@style/blackTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/expectCountEnd" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llContext_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llLz_line"
        android:layout_below="@+id/rlTime_line"
        android:orientation="vertical"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/blue"
        android:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llLz_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/tvTips_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvOk_line"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_36"
            android:background="@null"
            android:drawableTop="@mipmap/ic_down_42"
            android:drawablePadding="@dimen/dp_20"
            android:foreground="@drawable/view_foreground"
            android:gravity="center"
            android:text="@string/lineTip"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvOk_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginVertical="@dimen/dp_4"
            android:background="@drawable/duo_radius_blue_24"
            android:foreground="@drawable/view_foreground"
            android:gravity="center"
            android:text="@string/getCloudNow"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llYx_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTime_line"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_48"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvYeah_line"
            style="@style/blueBtn"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="1"
            android:foreground="@drawable/view_foreground"
            android:text="@string/getCloud" />

        <TextView
            android:id="@+id/tvQuit_line"
            style="@style/whiteBtn"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_weight="1"
            android:foreground="@drawable/view_foreground"
            android:text="@string/quitLine" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>