<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/dp_4"
    android:background="@color/white"
    android:paddingStart="0dp"
    android:paddingTop="0dp"
    android:paddingEnd="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_10">

    <ImageView
        android:id="@+id/ivServer_item"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10" />

    <TextView
        android:id="@+id/tvServerName_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toStartOf="@+id/ivSelect_item"
        android:layout_toEndOf="@+id/ivServer_item"
        android:text="@string/server"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/ivSelect_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvServerName_item"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_check_blue_66"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvDetail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvServerName_item"
        android:layout_alignStart="@+id/tvServerName_item"
        android:layout_alignParentEnd="true"
        android:text="@string/detail"
        android:textColor="@color/gray1"
        android:textSize="@dimen/sp_14" />

    <com.cloud.duolib.view.CornerLabelView
        android:id="@+id/flIcon_item"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:visibility="visible"
        app:myBackgroundColor="@color/pink"
        app:mySlantedHeight="30dp"
        app:myText="@string/play"
        app:myTextColor="@color/white"
        app:myTextSize="@dimen/sp_16"
        app:tagModel="left_bar" />
</RelativeLayout>