<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_48"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle_hor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tvTip_hor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_4"
        android:ellipsize="marquee"
        android:gravity="center"
        android:minHeight="@dimen/dp_48"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/gray6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDeny_hor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="@drawable/view_foreground"
            android:gravity="center"
            android:text="@string/dismiss"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray6" />

        <TextView
            android:id="@+id/tvSure_hor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="@drawable/view_foreground"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>